# ACHP

./: .env.example  .gitignore  LICENSE  README.md  package.json  railway.json
apps/api/: Dockerfile  Procfile  README.md  config.yaml  main.py  make_zip.py  nixpacks.toml  pyproject.toml  quick_test.py  requirements.txt  run_cache_tests.py  run_nil_tests.py  run_pipeline_tests.py  verify_env.py
apps/api/achp/agents/: __init__.py  adversary_a.py  adversary_b.py  judge.py  nil_supervisor.py  proposer.py  retriever.py  security_validator.py
apps/api/achp/cache/: __init__.py  embeddings.py  semantic_cache.py
apps/api/achp/core/: __init__.py  core_pipeline.py  master_orchestrator.py
apps/api/achp/data/: __init__.py  synthetic_generator.py
apps/api/achp/kb/: __init__.py  store.py
apps/api/achp/nil/: __init__.py  bias_classifier.py  confidence_synthesizer.py  framing_comparator.py  nil_layer.py  perspective_generator.py  sentiment_analyzer.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/unit/: __init__.py  demo_output.json  test_results_live.json  test_semantic_cache.py  test_suite_results.json
apps/web/: make_frontend_zip.py  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: AtomicClaims.tsx  KBManager.tsx  MetricsRadar.tsx  PerspectivePanel.tsx  PipelineProgress.tsx  PipelineTimeline.tsx  QueryInput.tsx  RAGAnswer.tsx  Sidebar.tsx  TopBar.tsx  TransparencyReport.tsx  VerdictCard.tsx
docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
(+5 files in other folders)
