[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "achp-api"
version = "0.2.0"
description = "ACHP Narrative Integrity Layer — FastAPI Backend"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
